src/main/webapp/assets/css/salesken_style.css
/* ... */
.mb-50 {
	margin-bottom: 50px !important;
}

/* end of margin style */
.istar-btn-primary:active {
	background: #f7657d !important;
}

.istar-btn-primary:focus {
	box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, .5);
}

input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus textarea:-webkit-autofill,
	textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus, select:-webkit-autofill,
	select:-webkit-autofill:hover, select:-webkit-autofill:focus {
	-webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
	-webkit-text-fill-color: #95989a !important;
}

/* start of task detail vertical tab */
#taskdetail-tab-list {
	background-color: #f9f9f9 !important;
}

#taskdetail-tab-list>.nav-link {
	color: #4d4f5c;
	font-size: 13px;
	background: transparent;
	min-width: 140px;
}

#taskdetail-tab-list>.active {
	background: #ffffff !important;
	color: #4d4f5c !important;
	box-shadow: 0 8px 30px 0 rgba(0, 0, 0, 0.1) !important;
	border-radius: 0;
	border-bottom: none;
	z-index: 4;
	/* transition : all 0.3s ease-in-out; */
	transform: scale(1) !important;
	-webkit-transform: scale(1) !important; /* Safari and Chrome */
	-moz-transform: scale(1) !important; /* Firefox */
	-ms-transform: sscale(1) !important; /* IE 9 */
	-o-transform: scale(1) !important; /* Opera */
}

#taskdetail-tab-list>.nav-link:hover {
	background: #ffffff !important;
	color: #4d4f5c !important;
	box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
	border-radius: 0;
	opacity: 2;
	/* 	transition : all 0.1s ease-in-out;
 */
	transform: scale(1.09);
	-webkit-transform: scale(1.09); /* Safari and Chrome */
	-moz-transform: scale(1.09); /* Firefox */
	-ms-transform: scale(1.09); /* IE 9 */
	-o-transform: scale(1.09); /* Opera */
}

/* end of  task detail vertical tab */
.task-icon {
	z-index: 1;
	border: 2px solid #ffffff;
}

.task-image {
	margin-left: -13px;
}

.task-image-right {
	margin-right: -13px;
}

.carousel-indicators .active {
	width: 10px;
	height: 10px;
	background-color: #ed4d67 !important;
	background-clip: content-box !important;
	border: 2px solid #ed4d67 !important;
	margin-top: 8px;
}

.carousel-indicators>li {
	border-radius: 50%;
	height: 10px;
	width: 10px;
	padding: 2px;
	background-color: #ffffff;
	background-clip: content-box;
	border: 2px solid #cccccc;
	margin-top: 8px;
}

/*boostrap select plugin making width of options text 100% in schedule task dropdown dashboard page*/
.bootstrap-select {
	border: 1px solid #cccccc !important;
	border-radius: 0px;
}

.bootstrap-select .dropdown-menu li a span.text {
	width: 100%;
}

.selectpicker ~.dropdown-menu .dropdown-item.active {
	background: #FDEDEF !important;
}

.selectpicker ~.dropdown-menu .dropdown-item {
	padding: 0px !important;
}

.selectpicker ~.dropdown-menu li:nth-child(odd) {
	background: #ffffff;
	border-bottom: 1px solid #eeeeee !important;
	outline-color: transparent;
}

.selectpicker ~.dropdown-menu li:nth-child(even) {
	background: #ffffff;
	border-bottom: 1px solid #eeeeee !important;
	outline-color: transparent;
}

.selectpicker ~.dropdown-menu li>a {
	outline-color: transparent;
}

.selectpicker ~.dropdown-menu>.bs-searchbox {
	padding: 40px 40px 10px 40px !important;
}

.selectpicker ~.dropdown-menu>.bs-searchbox>input:focus {
	color: #495057;
	background-color: #fff;
	border-color: #ed4d67 !important;
	outline: 0;
	box-shadow: none !important;
}

.selectpicker ~.dropdown-menu>.bs-searchbox>input {
	background-image: url(/assets/image/search.svg);
	background-repeat: no-repeat;
	background-position: 98% 50%;
	padding-right: 25px;
	border-radius: 0px;
}

.bootstrap-select .removefocus.dropdown-toggle:focus {
	outline: none !important;
	outline-offset: 0px !important;
	border-color: #ed4d67 !important;
	border-radius: 0px !important;
}

.selectpicker ~.dropdown-menu .dropdown-item:active {
	background-color: #f7657d;
	border-color: #f7657d !important;
}

.audioitem.active {
	transform: scale(1) !important;
	-webkit-transform: scale(1) !important; /* Safari and Chrome */
	-moz-transform: scale(1) !important; /* Firefox */
	-ms-transform: sscale(1) !important; /* IE 9 */
	-o-transform: scale(1) !important; /* Opera */
	box-shadow: 8px 4px 20px 0 rgba(0, 0, 0, 0.13);
}
.audioitem.active .f-16{
		font-size:18px !important;
		font-weight:500;
}
.audioitem.active .f-12{
	color: #999999 !important;
	font-weight:400 !important;
}



.audioitem.active .audioitemrow {
	border-bottom: 0 !important;
}

.audioitem.active .playaudio {
	background: #ed4d67 !important;
	color: white !important;
}

#extra>li:focus {
	outline: none;
	border-left: 4px solid #ed4d67;
}

/* exclusive to pipeline----------- */
.line {
	width: 72%;
	height: 1px;
	border: 1px dashed #eeeeee;
	position: absolute;
	top: 11px;
	left: 89px;
}

/* start of checkbox */
.istar-checkbox {
	display: none;
}

.istar-checkbox:checked ~ .istar-checkbox-style {
	border-color: transparent;
	border: none;
	background: #ed4d67;
	animation: jelly 0.6s ease;
}

.istar-checkbox-style {
	position: relative;
	width: 20px;
	height: 20px;
	border: 2px solid #999999;
	vertical-align: middle;
	transition: background 0.1s ease;
	cursor: pointer;
	margin: 0;
}

.istar-checkbox:checked ~ .istar-checkbox-style:after {
	opacity: 1;
	transform: rotate(45deg) scale(1);
}

.istar-checkbox-style:after {
	content: '';
	position: absolute;
	top: 1px;
	left: 7px;
	width: 7px;
	height: 13px;
	opacity: 0;
	transform: rotate(45deg) scale(0);
	border-right: 3px solid #fff;
	border-bottom: 3px solid #fff;
	transition: all 0.3s ease;
	transition-delay: 0.15s;
}

/* end of checkbox */

/*start of popover styling */
.popover_content {
	min-width: 200px;
}

.popover {
	background-color: #ffffff;
}

.popover.bottom .arrow::after {
	border-bottom-color: #ffffff;
}

.popover-content {
	background-color: #ffffff;
}

.popover {
	border-radius: 10px;
	max-width: 500px;
	width: auto;
}

.popover-body {
	padding: 0.5rem 0rem;
	color: #212529;
}
/* ... */

